Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberIntObj.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        Integer var
        var:SetValue(5)
        return var
    end
end